Bug 1180126 - Read content disposition regardless of content type in imgRequest::PrepareForNewPart. r=tn, a=kglazko